; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_remote-rdp.c_remote_rdp_wait.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_remote-rdp.c_remote_rdp_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.target_waitstatus = type { %struct.TYPE_3__, i32 }
%struct.TYPE_3__ = type { i32, i32 }

@ds = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@TARGET_WAITKIND_EXITED = common dso_local global i32 0, align 4
@TARGET_WAITKIND_STOPPED = common dso_local global i32 0, align 4
@TARGET_SIGNAL_TRAP = common dso_local global i32 0, align 4
@inferior_ptid = common dso_local global i32 0, align 4
@TARGET_WAITKIND_SIGNALLED = common dso_local global i32 0, align 4
@sigrc = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.target_waitstatus*)* @remote_rdp_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @remote_rdp_wait(i32 %0, %struct.target_waitstatus* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.target_waitstatus*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.target_waitstatus* %1, %struct.target_waitstatus** %4, align 8
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @ds, i32 0, i32 0), align 4
  switch i32 %5, label %6 [
    i32 130, label %7
    i32 129, label %7
    i32 131, label %15
  ]

6:                                                ; preds = %2
  br label %7

7:                                                ; preds = %2, %2, %6
  %8 = load i32, i32* @TARGET_WAITKIND_EXITED, align 4
  %9 = load %struct.target_waitstatus*, %struct.target_waitstatus** %4, align 8
  %10 = getelementptr inbounds %struct.target_waitstatus, %struct.target_waitstatus* %9, i32 0, i32 1
  store i32 %8, i32* %10, align 4
  %11 = call i32 @read_register(i32 0)
  %12 = load %struct.target_waitstatus*, %struct.target_waitstatus** %4, align 8
  %13 = getelementptr inbounds %struct.target_waitstatus, %struct.target_waitstatus* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  store i32 %11, i32* %14, align 4
  br label %23

15:                                               ; preds = %2
  %16 = load i32, i32* @TARGET_WAITKIND_STOPPED, align 4
  %17 = load %struct.target_waitstatus*, %struct.target_waitstatus** %4, align 8
  %18 = getelementptr inbounds %struct.target_waitstatus, %struct.target_waitstatus* %17, i32 0, i32 1
  store i32 %16, i32* %18, align 4
  %19 = load i32, i32* @TARGET_SIGNAL_TRAP, align 4
  %20 = load %struct.target_waitstatus*, %struct.target_waitstatus** %4, align 8
  %21 = getelementptr inbounds %struct.target_waitstatus, %struct.target_waitstatus* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  store i32 %19, i32* %22, align 4
  br label %23

23:                                               ; preds = %15, %7
  %24 = load i32, i32* @inferior_ptid, align 4
  ret i32 %24
}

declare dso_local i32 @read_register(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
